--- a/index.html
+++ b/index.html
@@ -487,10 +487,13 @@
                     <div class="pricing-one__btn-block">
                         <ul class="list-unstyled nav nav-tabs">
                             <li class="nav-item">
-                                <a href="#monthly" class="nav-link active" data-toggle="tab">Monthly</a>
+                                <a href="#monthly" class="nav-link active" data-toggle="tab">GBOB</a>
                             </li><!-- /.nav-item -->
                             <li class="nav-item">
-                                <a href="#yearly" class="nav-link " data-toggle="tab">Yearly</a>
+                                <a href="#yearly" class="nav-link " data-toggle="tab">Development</a>
+                            </li><!-- /.nav-item -->
+                            <li class="nav-item">
+                                <a href="#blockchain" class="nav-link " data-toggle="tab">BlockChain</a>
                             </li><!-- /.nav-item -->
                         </ul><!-- /.list-unstyled nav nav-tabs -->
                     </div><!-- /.pricing-one__btn-block -->
@@ -505,13 +508,12 @@
                                         <img src="assets/images/shapes/pricing-i-1-1.png" alt="">
                                         <div class="pricing-one__top">
                                             <h3>Guest Post</h3>
-                                            <p><span>$</span>99.99</p>
+                                            <p><span>$</span>50</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
                                             <li><i class="far fa-check"></i>600+ word</li>
-                                            <li><i class="far fa-check"></i>40 - 60 DA, DR sites</li>
+                                            <li><i class="far fa-check"></i>30 - 50 DA, DR sites</li>
                                             <li><i class="far fa-check"></i>2 - 3 Permanent DoFollow backlink</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
                                         <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                                         
@@ -526,16 +528,16 @@
                                         <!-- /.pricing-one__corner-ribbon -->
                                         <img src="assets/images/shapes/pricing-i-1-2.png" alt="">
                                         <div class="pricing-one__top">
-                                            <h3>Regular</h3>
-                                            <p><span>$</span>45.99</p>
+                                            <h3>Guest Post</h3>
+                                            <p><span>$</span>80</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>800+ word</li>
+                                            <li><i class="far fa-check"></i>50 - 70 DA, DR sites</li>
+                                            <li><i class="far fa-check"></i>2 - 3 Permanent DoFollow backlink</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
-                                        <a href="#" class="thm-btn pricing-one__btn">Choose Plan <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
                                     </div><!-- /.pricing-one__inner -->
                                 </div><!-- /.pricing-one__single -->
                             </div><!-- /.col-lg-4 -->
@@ -544,16 +546,16 @@
                                     <div class="pricing-one__inner">
                                         <img src="assets/images/shapes/pricing-i-1-3.png" alt="">
                                         <div class="pricing-one__top">
-                                            <h3>Premium</h3>
-                                            <p><span>$</span>89.99</p>
+                                            <h3>Guest Post</h3>
+                                            <p><span>$</span>100</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>1000+ word</li>
+                                            <li><i class="far fa-check"></i>30+ DA, DR sites</li>
+                                            <li><i class="far fa-check"></i>2 - 3 Permanent DoFollow backlink</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
-                                        <a href="#" class="thm-btn pricing-one__btn">Choose Plan <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
                                     </div><!-- /.pricing-one__inner -->
                                 </div><!-- /.pricing-one__single -->
                             </div><!-- /.col-lg-4 -->
@@ -566,16 +568,18 @@
                                     <div class="pricing-one__inner">
                                         <img src="assets/images/shapes/pricing-i-1-1.png" alt="">
                                         <div class="pricing-one__top">
-                                            <h3>Startup</h3>
-                                            <p><span>$</span>69.99</p>
+                                            <h3>Web Development using git</h3>
+                                            <p><span>$</span>150</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>Free Hosting</li>
+                                            <li><i class="far fa-check"></i>99.99% uptime</li>
+                                            <li><i class="far fa-check"></i>Custom Domain Setting</li>
+                                            <li><i class="far fa-check"></i>Template Installation</li>
+                                            <li><i class="far fa-check"></i>SEO Friendly</li>
+                                            <li><i class="far fa-check"></i>Potfolio, Blog, Magazine, & E-Commerce</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
-                                        <a href="#" class="thm-btn pricing-one__btn">Choose Plan <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
                                     </div><!-- /.pricing-one__inner -->
                                 </div><!-- /.pricing-one__single -->
                             </div><!-- /.col-lg-4 -->
@@ -586,16 +590,19 @@
                                         <!-- /.pricing-one__corner-ribbon -->
                                         <img src="assets/images/shapes/pricing-i-1-2.png" alt="">
                                         <div class="pricing-one__top">
-                                            <h3>Regular</h3>
-                                            <p><span>$</span>79.99</p>
+                                            <h3>WordPress Development</h3>
+                                            <p><span>$</span>80</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>Hosting on Best Platform</li>
+                                            <li><i class="far fa-check"></i>99.99% uptime</li>
+                                            <li><i class="far fa-check"></i>Custom Domain Setting</li>
+                                            <li><i class="far fa-check"></i>Template and Plugin Installation</li>
+                                            <li><i class="far fa-check"></i>SEO Friendly</li>
+                                            <li><i class="far fa-check"></i>Potfolio, Blog, Magazine, & E-Commerce</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
-                                        <a href="#" class="thm-btn pricing-one__btn">Choose Plan <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
                                     </div><!-- /.pricing-one__inner -->
                                 </div><!-- /.pricing-one__single -->
                             </div><!-- /.col-lg-4 -->
@@ -604,8 +611,33 @@
                                     <div class="pricing-one__inner">
                                         <img src="assets/images/shapes/pricing-i-1-3.png" alt="">
                                         <div class="pricing-one__top">
-                                            <h3>Premium</h3>
-                                            <p><span>$</span>99.99</p>
+                                            <h3>Blogger with Custom Domain</h3>
+                                            <p><span>$</span>50</p>
+                                        </div><!-- /.pricing-one__top -->
+                                        <ul class="pricing-one__list list-unstyled">
+                                            <li><i class="far fa-check"></i>Free Hosting</li>
+                                            <li><i class="far fa-check"></i>99.99% uptime</li>
+                                            <li><i class="far fa-check"></i>Custom Domain Setting</li>
+                                            <li><i class="far fa-check"></i>Template Installation</li>
+                                            <li><i class="far fa-check"></i>SEO Friendly</li>
+                                            <li><i class="far fa-check"></i>Potfolio, Blog, Magazine, & E-Commerce</li>
+                                        </ul><!-- /.pricing-one__list list-unstyled -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
+                                    </div><!-- /.pricing-one__inner -->
+                                </div><!-- /.pricing-one__single -->
+                            </div><!-- /.col-lg-4 -->
+                        </div><!-- /.row -->
+                    </div><!-- /.tab-pane fade in active -->
+                    <div class="tab-pane animated fadeInUp " id="blockchain">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="pricing-one__single">
+                                    <div class="pricing-one__inner">
+                                        <img src="assets/images/shapes/pricing-i-1-1.png" alt="">
+                                        <div class="pricing-one__top">
+                                            <h3>BlockChain Development</h3>
+                                            <p><span>$</span>1000</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
                                             <li><i class="far fa-check"></i>50GB Bandwidth</li>
@@ -613,10 +645,33 @@
                                             <li><i class="far fa-check"></i>24 hour support</li>
                                             <li><i class="far fa-check"></i>Customer Managemet</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
-                                        <a href="#" class="thm-btn pricing-one__btn">Choose Plan <i class="fa fa-angle-double-right"></i></a><!-- /.thm-btn pricing-one__btn -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
                                     </div><!-- /.pricing-one__inner -->
                                 </div><!-- /.pricing-one__single -->
                             </div><!-- /.col-lg-4 -->
+                            <div class="col-lg-4">
+                                <div class="pricing-one__single">
+                                    <div class="pricing-one__inner">
+                                        <span class="pricing-one__corner-ribbon">Best</span>
+                                        <!-- /.pricing-one__corner-ribbon -->
+                                        <img src="assets/images/shapes/pricing-i-1-2.png" alt="">
+                                        <div class="pricing-one__top">
+                                            <h3>Smart Contract</h3>
+                                            <p><span>$</span>1000</p>
+                                        </div><!-- /.pricing-one__top -->
+                                        <ul class="pricing-one__list list-unstyled">
+                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
+                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
+                                            <li><i class="far fa-check"></i>24 hour support</li>
+                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                        </ul><!-- /.pricing-one__list list-unstyled -->
+                                        <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
+                                        <!-- /.thm-btn pricing-one__btn -->
+                                    </div><!-- /.pricing-one__inner -->
+                                </div><!-- /.pricing-one__single -->
+                            </div><!-- /.col-lg-4 -->
+                            
                         </div><!-- /.row -->
                     </div><!-- /.tab-pane fade in active -->
                 </div><!-- /.tab-content -->
