--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                         <div class="service-two__block">
                             <div class="block-title-two text-left">
                                 <p>about us</p>
-                                <h3>Exclusive Agency To <br> Provide Soluation</h3>
+                                <h3>Exclusive Agency To <br> Provide Solution</h3>
                             </div><!-- /.block-title-two -->
                             <p>BlockChain Technology Software house have very professional and expert team. Everyone is expert in their own field. Two year ago, when we started this Software house,we just have web development team. But Now we have :</p>
                             <ul class="list-unstyled video-one__list">
