--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <span>GBOB </span> 
                             </h3> <br>
                             <h4>
-                                <em style="color:var(--thm-base)";>Guest Blogging Online (Outsourse) Business</em>
+                                <em style="color:var(--thm-base)";>Guest Blogging Online (OutSourse) Business</em>
                             
                                 <br>
                                 <br>
@@ -123,7 +123,7 @@
             </div><!-- /.container -->
         </section><!-- /.banner-two -->
 
-        <section class="brand-one brand-one__home-two">
+        <section class="brand-one brand-one__home-two brand-one__service-page">
             <div class="container">
                 <div class="block-title-two text-center">
                     <p>Our Clients</p>
@@ -170,6 +170,8 @@
             </div><!-- /.container -->
         </section><!-- /.brand-one -->
 
+
+
         <section class="cta-three">
             <div class="container">
                 <div class="row">
@@ -184,6 +186,7 @@
                     <div class="col-lg-5">
                         <div class="cta-three__content">
                             <div class="block-title-two text-left">
+                                <br><br>
                                 <p>why choose us</p>
                                 <h3>We Are Exclusive <br> Solution Agency</h3>
                             </div><!-- /.block-title-two -->
@@ -194,7 +197,7 @@
                                     </div><!-- /.cta-three__icon -->
                                     <div class="cta-three__box-content">
                                         <h3>Business Strategy</h3>
-                                        <p>We will increase your website DR (Domain Ranking) and DA (Domain Autority) by increasing your backlink using guest posting</p>
+                                        <p>We will increase your website DR (Domain Ranking) and DA (Domain Autority) by increasing your backlink using guest posting.</p>
                                     </div><!-- /.cta-three__box-content -->
                                 </div><!-- /.cta-three__box -->
                                 <div class="cta-three__box">
@@ -640,10 +643,10 @@
                                             <p><span>$</span>1000</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>Unchangeable DApp</li>
+                                            <li><i class="far fa-check"></i>Using Ethereum Platform</li>
+                                            <li><i class="far fa-check"></i>Solidity, React and more</li>
+                                            <li><i class="far fa-check"></i>Dilevery within two month</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
                                         <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                                         <!-- /.thm-btn pricing-one__btn -->
@@ -661,10 +664,10 @@
                                             <p><span>$</span>1000</p>
                                         </div><!-- /.pricing-one__top -->
                                         <ul class="pricing-one__list list-unstyled">
-                                            <li><i class="far fa-check"></i>50GB Bandwidth</li>
-                                            <li><i class="far fa-check"></i>Business & Financ Analysing</li>
-                                            <li><i class="far fa-check"></i>24 hour support</li>
-                                            <li><i class="far fa-check"></i>Customer Managemet</li>
+                                            <li><i class="far fa-check"></i>Using Solidity</li>
+                                            <li><i class="far fa-check"></i>Using Ethereum Platform</li>
+                                            <li><i class="far fa-check"></i>Creation using remix</li>
+                                            <li><i class="far fa-check"></i>Dilevery within ten days</li>
                                         </ul><!-- /.pricing-one__list list-unstyled -->
                                         <a href="https://www.blockchain313.com/p/contact-us.html" class="thm-btn pricing-one__btn">Contact US <i class="fa fa-angle-double-right"></i></a>
                                         <!-- /.thm-btn pricing-one__btn -->
